Ajustes na API com JWT e refatorando os testes para suportar token
