# swagger.json
@@ -5,6 +5,15 @@
     "version": "1.0.0",
     "description": "API para login, registro, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
   "paths": {
     "/users/register": {
       "post": {
@@ -65,6 +74,9 @@
     },
     "/transfers": {
       "post": {
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "summary": "Realizar transferência",
         "requestBody": {
           "required": true,
@@ -88,6 +100,9 @@
         }
       },
       "get": {
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "summary": "Listar transferências",
         "responses": {
           "200": { "description": "Lista de transferências" }
